--- a/app/src/main/res/layout/activity_social_events.xml
+++ b/app/src/main/res/layout/activity_social_events.xml
@@ -4,15 +4,14 @@
     android:id="@+id/activity_social_events"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.chaitnya.gallery.ui.social_events">
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="social"/>
+    <android.support.v7.widget.RecyclerView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/rec_list">
 
+
+
+    </android.support.v7.widget.RecyclerView>
 
 </RelativeLayout>
