--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,13 @@
     <color name="colorMagenta_light">#ff0080</color>
     <color name="colorDairymilk_end">#550f9d</color>
     <color name="colorSelectedBlack">#000000</color>
+    <color name="colorSecondary">#F44336</color>
+    <color name="colorPrimaryDark2">#D32F2F</color>
+    <color name="colorPrimaryLight">#FFCDD2</color>
+    <color name="colorAccent2">#7C4DFF</color>
+    <color name="colorPrimaryText">#212121</color>
+    <color name="colorSecondaryText">#727272</color>
+    <color name="colorIcons">#FFFFFF</color>
+    <color name="colorWhite">#FFFFFF</color>
+    <color name="colorDivider">#B6B6B6</color>
 </resources>
